Fixed wrapping issues with random info section
Adjusted max widths and used flex wrapping

--- a/styles.css
+++ b/styles.css
@@ -104,16 +104,24 @@ a {
 }
 
 .card img {
-    width: 150px;
+    max-width: 150px;
     height: 150px;
+    width: 100%;
     border: 2px solid #3882f6;
-    border-radius: 10px
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .info-cards {
     display: flex;
     justify-content: center;
-    gap: 20px
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.card {
+    flex: 1 1 150px;
+    max-width: 150px
 }
 
 .quote {
@@ -183,5 +191,6 @@ footer p {
     text-align: center;
     font-size: 12px;
     font-weight: 300;
-    padding: 20px 0
+    padding: 20px 0;
+    margin: 0
 }
